--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </style>
     </head>
     <body>
-        <div class="test"></div>
-        <div class="test1"></div>
+        <div class="demo"></div>
+        <div class="demo1"></div>
         
         
         <script type="module" src="./demos/extension.js"></script>
